# openenv-email-agent

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
