[project]
name = "openenv-email-agent"
version = "0.1.0"
description = "OpenEnv environment for enterprise email triage"
authors = [
    {name = "Aniket Yadav"}
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
entry_point = "env.environment:EmailEnv"